// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchView renders correctly 1`] = `
<div>
  <div
    id="search-container"
  >
    <h2>
      Welcome to the search page
    </h2>
    <div>
      <label
        for="major"
      >
        Major:
      </label>
      <select
        id="major"
        name="major"
      >
        <option
          value=""
        >
          Select a major
        </option>
        <option
          value="Physics"
        >
          Physics
        </option>
        <option
          value="Political Science"
        >
          Political Science
        </option>
        <option
          value="Business Administration"
        >
          Business Administration
        </option>
        <option
          value="Psychology"
        >
          Psychology
        </option>
        <option
          value="Mathematics"
        >
          Mathematics
        </option>
        <option
          value="Biology"
        >
          Biology
        </option>
        <option
          value="Computer Science"
        >
          Computer Science
        </option>
        <option
          value="Nursing"
        >
          Nursing
        </option>
        <option
          value="Mechanical Engineering"
        >
          Mechanical Engineering
        </option>
      </select>
    </div>
    <div>
      <label
        for="professor"
      >
        Professor:
      </label>
      <select
        id="professor"
        name="professor"
      >
        <option
          value=""
        >
          Select a professor
        </option>
        <option
          value="Olivia Lewis"
        >
          Olivia Lewis
        </option>
        <option
          value="Mia Lee"
        >
          Mia Lee
        </option>
        <option
          value="Carter Martinez"
        >
          Carter Martinez
        </option>
        <option
          value="Layla Perez"
        >
          Layla Perez
        </option>
        <option
          value="William Smith"
        >
          William Smith
        </option>
        <option
          value="Aria Thompson"
        >
          Aria Thompson
        </option>
        <option
          value="Victoria Thomas"
        >
          Victoria Thomas
        </option>
        <option
          value="Lucy Miller"
        >
          Lucy Miller
        </option>
        <option
          value="Aiden Perez"
        >
          Aiden Perez
        </option>
        <option
          value="Ethan Hernandez"
        >
          Ethan Hernandez
        </option>
        <option
          value="William Anderson"
        >
          William Anderson
        </option>
        <option
          value="Scarlett King"
        >
          Scarlett King
        </option>
        <option
          value="Liam Rodriguez"
        >
          Liam Rodriguez
        </option>
        <option
          value="Alexander Roberts"
        >
          Alexander Roberts
        </option>
        <option
          value="Aria Clark"
        >
          Aria Clark
        </option>
        <option
          value="Amelia Jackson"
        >
          Amelia Jackson
        </option>
        <option
          value="Scarlett Hernandez"
        >
          Scarlett Hernandez
        </option>
        <option
          value="Ella Garcia"
        >
          Ella Garcia
        </option>
        <option
          value="Evelyn Green"
        >
          Evelyn Green
        </option>
        <option
          value="Aria Scott"
        >
          Aria Scott
        </option>
        <option
          value="Matthew Wright"
        >
          Matthew Wright
        </option>
        <option
          value="William Green"
        >
          William Green
        </option>
        <option
          value="Harper Martinez"
        >
          Harper Martinez
        </option>
        <option
          value="Ella Walker"
        >
          Ella Walker
        </option>
        <option
          value="Noah Green"
        >
          Noah Green
        </option>
        <option
          value="Lucas Moore"
        >
          Lucas Moore
        </option>
        <option
          value="Scarlett Thompson"
        >
          Scarlett Thompson
        </option>
        <option
          value="David Rodriguez"
        >
          David Rodriguez
        </option>
        <option
          value="Aiden White"
        >
          Aiden White
        </option>
        <option
          value="Harper Rodriguez"
        >
          Harper Rodriguez
        </option>
      </select>
    </div>
    <div>
      <label
        for="category"
      >
        Category:
      </label>
      <select
        id="category"
        name="category"
      >
        <option
          value=""
        >
          Select a category
        </option>
        <option
          value="Social Sciences and Humanities"
        >
          Social Sciences and Humanities
        </option>
        <option
          value="Natural Sciences"
        >
          Natural Sciences
        </option>
        <option
          value="Physical and Mathematical Sciences"
        >
          Physical and Mathematical Sciences
        </option>
        <option
          value="Biomedical Sciences"
        >
          Biomedical Sciences
        </option>
        <option
          value="Interdisciplinary Research (research across 3 or more different departments or colleges)"
        >
          Interdisciplinary Research (research across 3 or more different departments or colleges)
        </option>
        <option
          value="Business"
        >
          Business
        </option>
        <option
          value="Arts"
        >
          Arts
        </option>
        <option
          value="Engineering and Information Sciences (including Biomedical Engineering)"
        >
          Engineering and Information Sciences (including Biomedical Engineering)
        </option>
        <option
          value="Education"
        >
          Education
        </option>
        <option
          value="Allied Health"
        >
          Allied Health
        </option>
      </select>
    </div>
    <div>
      <label
        for="university"
      >
        University:
      </label>
      <select
        id="university"
        name="university"
      >
        <option
          value=""
        >
          Select a university
        </option>
        <option
          value="UMaine Machias"
        >
          UMaine Machias
        </option>
        <option
          value="UMaine Orono"
        >
          UMaine Orono
        </option>
      </select>
    </div>
    <pre>
      {
  "major": null,
  "professor": null,
  "category": null,
  "university": null
}
    </pre>
  </div>
</div>
`;

exports[`SearchView renders correctly 2`] = `
<div>
  <div
    id="search-container"
  >
    <h2>
      Welcome to the search page
    </h2>
    <div>
      <label
        for="major"
      >
        Major:
      </label>
      <select
        id="major"
        name="major"
      >
        <option
          value=""
        >
          Select a major
        </option>
        <option
          value="Physics"
        >
          Physics
        </option>
        <option
          value="Political Science"
        >
          Political Science
        </option>
        <option
          value="Business Administration"
        >
          Business Administration
        </option>
        <option
          value="Psychology"
        >
          Psychology
        </option>
        <option
          value="Mathematics"
        >
          Mathematics
        </option>
        <option
          value="Biology"
        >
          Biology
        </option>
        <option
          value="Computer Science"
        >
          Computer Science
        </option>
        <option
          value="Nursing"
        >
          Nursing
        </option>
        <option
          value="Mechanical Engineering"
        >
          Mechanical Engineering
        </option>
      </select>
    </div>
    <div>
      <label
        for="professor"
      >
        Professor:
      </label>
      <select
        id="professor"
        name="professor"
      >
        <option
          value=""
        >
          Select a professor
        </option>
        <option
          value="Olivia Lewis"
        >
          Olivia Lewis
        </option>
        <option
          value="Mia Lee"
        >
          Mia Lee
        </option>
        <option
          value="Carter Martinez"
        >
          Carter Martinez
        </option>
        <option
          value="Layla Perez"
        >
          Layla Perez
        </option>
        <option
          value="William Smith"
        >
          William Smith
        </option>
        <option
          value="Aria Thompson"
        >
          Aria Thompson
        </option>
        <option
          value="Victoria Thomas"
        >
          Victoria Thomas
        </option>
        <option
          value="Lucy Miller"
        >
          Lucy Miller
        </option>
        <option
          value="Aiden Perez"
        >
          Aiden Perez
        </option>
        <option
          value="Ethan Hernandez"
        >
          Ethan Hernandez
        </option>
        <option
          value="William Anderson"
        >
          William Anderson
        </option>
        <option
          value="Scarlett King"
        >
          Scarlett King
        </option>
        <option
          value="Liam Rodriguez"
        >
          Liam Rodriguez
        </option>
        <option
          value="Alexander Roberts"
        >
          Alexander Roberts
        </option>
        <option
          value="Aria Clark"
        >
          Aria Clark
        </option>
        <option
          value="Amelia Jackson"
        >
          Amelia Jackson
        </option>
        <option
          value="Scarlett Hernandez"
        >
          Scarlett Hernandez
        </option>
        <option
          value="Ella Garcia"
        >
          Ella Garcia
        </option>
        <option
          value="Evelyn Green"
        >
          Evelyn Green
        </option>
        <option
          value="Aria Scott"
        >
          Aria Scott
        </option>
        <option
          value="Matthew Wright"
        >
          Matthew Wright
        </option>
        <option
          value="William Green"
        >
          William Green
        </option>
        <option
          value="Harper Martinez"
        >
          Harper Martinez
        </option>
        <option
          value="Ella Walker"
        >
          Ella Walker
        </option>
        <option
          value="Noah Green"
        >
          Noah Green
        </option>
        <option
          value="Lucas Moore"
        >
          Lucas Moore
        </option>
        <option
          value="Scarlett Thompson"
        >
          Scarlett Thompson
        </option>
        <option
          value="David Rodriguez"
        >
          David Rodriguez
        </option>
        <option
          value="Aiden White"
        >
          Aiden White
        </option>
        <option
          value="Harper Rodriguez"
        >
          Harper Rodriguez
        </option>
      </select>
    </div>
    <div>
      <label
        for="category"
      >
        Category:
      </label>
      <select
        id="category"
        name="category"
      >
        <option
          value=""
        >
          Select a category
        </option>
        <option
          value="Social Sciences and Humanities"
        >
          Social Sciences and Humanities
        </option>
        <option
          value="Natural Sciences"
        >
          Natural Sciences
        </option>
        <option
          value="Physical and Mathematical Sciences"
        >
          Physical and Mathematical Sciences
        </option>
        <option
          value="Biomedical Sciences"
        >
          Biomedical Sciences
        </option>
        <option
          value="Interdisciplinary Research (research across 3 or more different departments or colleges)"
        >
          Interdisciplinary Research (research across 3 or more different departments or colleges)
        </option>
        <option
          value="Business"
        >
          Business
        </option>
        <option
          value="Arts"
        >
          Arts
        </option>
        <option
          value="Engineering and Information Sciences (including Biomedical Engineering)"
        >
          Engineering and Information Sciences (including Biomedical Engineering)
        </option>
        <option
          value="Education"
        >
          Education
        </option>
        <option
          value="Allied Health"
        >
          Allied Health
        </option>
      </select>
    </div>
    <div>
      <label
        for="university"
      >
        University:
      </label>
      <select
        id="university"
        name="university"
      >
        <option
          value=""
        >
          Select a university
        </option>
        <option
          value="UMaine Machias"
        >
          UMaine Machias
        </option>
        <option
          value="UMaine Orono"
        >
          UMaine Orono
        </option>
      </select>
    </div>
    <pre>
      {
  "major": "",
  "professor": "",
  "category": "",
  "university": ""
}
    </pre>
  </div>
</div>
`;
